--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angularfirebase-authentication": {
+    "proyectoFinal": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/angularfirebase-authentication",
+            "outputPath": "dist/proyectoFinal",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angularfirebase-authentication:build"
+            "browserTarget": "proyectoFinal:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angularfirebase-authentication:build:production"
+              "browserTarget": "proyectoFinal:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angularfirebase-authentication:build"
+            "browserTarget": "proyectoFinal:build"
           }
         },
         "test": {
@@ -108,7 +108,7 @@
         }
       }
     },
-    "angularfirebase-authentication-e2e": {
+    "proyectoFinal-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -117,11 +117,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angularfirebase-authentication:serve"
+            "devServerTarget": "proyectoFinal:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angularfirebase-authentication:serve:production"
+              "devServerTarget": "proyectoFinal:serve:production"
             }
           }
         },
@@ -137,7 +137,7 @@
       }
     }
   },
-  "defaultProject": "angularfirebase-authentication",
+  "defaultProject": "proyectoFinal",
   "cli": {
     "analytics": false
   }
